--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -9,79 +9,146 @@
 header{
     background-color: rgb(193, 240, 39);
     font-family: 'DM Sans', sans-serif;
-    padding: 15px;
-    padding-bottom: 30px;
     display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    height: 110px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
-.tituloPrincipal{
-    text-align: left;
-    font-size: 35px;
-    padding-top: 15px;
-    height: 10px;
-    padding-left: 60px;
-}
-
-ul{
-    text-align: right;
-    font-size: 20px;
-}
-
-li{
-    display: inline-block;
-    height: 30px;
-}
 
 a{
     text-decoration: none;
-    margin: 5px;
+    color: black;
 }
 
-.divPrincipal{
+.logoTitulo{
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    height: 46px;
+    width: 46px;
+    margin-right: 10px;
+}
+
+
+.listaNav{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 16px;
+    width: auto;
+    height:auto;
+}
+
+.elementosListaNav{
+    display: flex;
+    margin: 0px 10px 0px 10px;
+}
+
+nav a{
+    font-weight: 600;
+    font-size: 20px;
+    width: auto;
+    height: auto;
+}
+
+nav a:hover{
+    color: white;
+}
+
+.divConteiner{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap: 30px;
+    gap: 20px;
+    grid-template-columns: repeat(2,1fr);
     grid-template-areas: 
-
-    "item2 item2 item1"
-    "item2 item2 item3"
+    
+    "item1 item2"
+    "item1 item2"
+    
+    ;
 }
-
 
 .item1{
-    font-family: 'DM Sans', sans-serif;
-    font-size: 40px;
     grid-area: item1;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 45px;
-    padding-top: 70PX;
-    align-items: center;
- 
+    margin: 30px;
 }
-
 
 .item2{
     grid-area: item2;
-    padding: 20px;
-    width: 50%;
-    height: 50%;
-
-}
-
-.item3{
-    font-family: 'DM Sans', sans-serif;
-    grid-area: item3;
-    padding-left: 40px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
 }
 
-h2{
+.tituloDietetica{
+    font-family: 'DM Sans', sans-serif;
+    font-size: 3rem;
+}
+
+.parrafoDietetica{
+    font-family: 'DM Sans', sans-serif;
+    font-size: 19px;
+}
+
+.listaDietetica{
+    font-family: 'DM Sans', sans-serif;
+    font-size: 19px;
+}
+
+.carousel{
+    width: 1180px;
+    height: 600px;
+    box-shadow: 34px -10px 7px 2px rgb(0 0 0 / 17%);
+}
+
+.h2{
     font-family: 'DM Sans', sans-serif;
     padding-top: 30px;
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+.productosConteiner{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 20px;
+    margin: 20px;
+    grid-template-areas: 
+    
+    "itemF"
+    "itemH"
+    "itemS"
+    
+    ;
+}
+
+.itemF{
+    grid-area: itemF;
+}
+
+.itemH{
+    grid-area: itemH;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.itemS{
+    grid-area: itemS;
+}
+
+
+
+.parrafosProductos{
+    font-family: 'DM Sans', sans-serif;
+    font-size: 20px;
+    margin-top: 20px;
 }
 
 
@@ -92,4 +159,45 @@ footer{
     flex-direction: row;
     justify-content: center;
     padding-bottom: 20px;
+    margin-top: 113px;
+}
+
+
+@media (max-width:1445px){
+    header{
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+    }
+
+
+    .divConteiner{
+
+    grid-template-columns: repeat(1,1fr);
+    grid-template-areas: 
+    
+    "item1"
+    "item2"
+    
+    ;
+
+    }    
+    
+    .carousel{
+        width: auto;
+        height: auto;
+    }
+
+    .item2{
+        align-items: center;
+    }
+}
+
+@media (max-widht:620px){
+
+   nav{
+    display: flex;
+    width: auto;
+    height: auto;
+   }
 }
