--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -3,6 +3,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'DM Sans', sans-serif;
 }
 
 
@@ -17,7 +18,6 @@ header{
     padding: 10px;
 }
 
-
 a{
     text-decoration: none;
     color: black;
@@ -26,6 +26,11 @@ a{
 .logoTitulo{
     display: flex;
     align-items: center;
+}
+
+.logoTitulo a{
+    text-decoration: none;
+    color: black;
 }
 
 .logo{
@@ -151,6 +156,144 @@ nav a:hover{
     margin-top: 20px;
 }
 
+.ubiConteiner{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-areas:
+    
+    "item3 item4"
+    "item3 item4"
+    "item7 item7"
+    "item5 item5"
+    "item6 item6"
+    
+    
+    
+    ;
+}
+
+.item3{
+    grid-area: item3;
+    margin: 50px;
+}
+
+.item4{
+    grid-area: item4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.item5{
+    grid-area: item5;
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(193, 240, 39);
+    margin-top: 50px;
+}
+.item5 img{
+    padding: 20px;
+}
+
+.item6{
+    grid-area: item6;
+    display: flex;
+    justify-content: center;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 30px;
+    margin-top: 40px;
+    
+}
+
+.item6 a{
+    text-decoration: none;
+    color: black;
+}
+
+.item7{
+    grid-area: item7;
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    font-size: 40px;
+}
+
+.recConteiner{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-areas: 
+    
+    "item11"
+    "item8"
+    "item9"
+    "item10"
+    
+    ;
+}
+
+.item8{
+    grid-area: item8;
+}
+
+.item9{
+    grid-area: item9;
+}
+
+.item10{
+    grid-area: item10;
+}
+.item11{
+    grid-area: item11;
+}
+
+.recConteiner img{
+    width: 600px;
+    height: 400px;
+    margin: 40px;
+}
+
+.row2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row2 h1{
+    margin-top: 40px;
+    font-size: 50px;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.row2 p{
+    padding: 0 60px 0 60px;
+}
+
+.tituloContacto h1{
+    margin-top: 70px;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 40px;
+}
+
+.tituloContacto{
+    height: 0px;
+}
+
+.formulario{
+    height: 570px;
+    font-family: 'DM Sans' sans-serif;
+    font-size: 20px;
+    background-color: rgb(193, 240, 39);
+    height: 550px;
+}
+
+
+form button{
+    margin-top: 20px;
+}
+
 
 footer{
     background-color: rgb(193, 240, 39);
@@ -193,6 +336,27 @@ footer{
 
     .parrafoDietetica{
         margin: 0 10px 0 10px;
+    }
+
+    .ubiConteiner{
+    
+        grid-template-columns: repeat(1,1fr);
+        grid-template-areas:
+    
+        "item3"
+        "item4"
+        "item7"
+        "item5"
+        "item6"
+        
+        
+        
+        ;
+    }
+
+    .item4{
+        align-items: center;
+        margin-top: 50px;
     }
 }
 
