--- a/sass/_contenedorindex.scss
+++ b/sass/_contenedorindex.scss
@@ -19,11 +19,11 @@
         justify-content: center;
         margin-top: 50px;
         .tituloDietetica{
-            font-family: 'DM Sans', sans-serif;
+            font-family: $fuente;
             font-size: 3rem;
         }
         .parrafoDietetica{
-            font-family: 'DM Sans', sans-serif;
+            font-family: $fuente;
             font-size: 19px;
         }
         .listaDietetica{
