--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color: rgb(193, 240, 39);
+    background-color: $verde;
     padding: 30px;
     display: flex;
     flex-direction: row;
