--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(193, 240, 39);
+    background-color: $verde;
     font-family: "DM Sans", sans-serif;
     display: flex;
     height: 110px;
