--- a/sass/_recetas.scss
+++ b/sass/_recetas.scss
@@ -37,7 +37,7 @@
     h1{
         margin-top: 40px;
         font-size: 50px;
-        font-family: 'DM Sans', sans-serif;
+        font-family: $fuente;
     }
     p{
         padding: 0 60px 0 60px;
