--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import "fuentes";
 @import "global";
 @import "clases";
+@import "operaciones";
 @import "logotitulo";
 @import "nav";
 @import "contenedorindex";
