--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -2,17 +2,16 @@
     height: 0px;
     h1{
         margin-top: 70px;
-        font-family: 'DM Sans', sans-serif;
+        font-family: $fuente;
         font-size: 40px;
     }
 }
 
 .formulario{
     height: 570px;
-    font-family: 'DM Sans' sans-serif;
+    font-family: $fuente;
     font-size: 20px;
-    background-color: rgb(193, 240, 39);
-    height: 550px;
+    background-color: $verde;
     form{
         button{
             margin-top: 20px;
