--- a/sass/_logotitulo.scss
+++ b/sass/_logotitulo.scss
@@ -1,9 +1,8 @@
 header{
-    background-color: rgb(193, 240, 39);
-    font-family: 'DM Sans', sans-serif;
+    @include size (100%,110px);
+    background-color: $verde;
+    font-family: $fuente;
     display: flex;
-    height: 110px;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
