--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -14,7 +14,7 @@
     .itemF{
         grid-area: itemF;
         .parrafosProductos{
-            font-family: 'DM Sans', sans-serif;
+            font-family: $fuente;
             font-size: 20px;
             margin-top: 20px;
         }
@@ -25,7 +25,7 @@
         flex-direction: column;
         align-items: flex-end;
         .parrafosProductos{
-            font-family: 'DM Sans', sans-serif;
+            font-family: $fuente;
             font-size: 20px;
             margin-top: 20px;
         }
@@ -33,7 +33,7 @@
     .itemS{
         grid-area: itemS;
         .parrafosProductos{
-            font-family: 'DM Sans', sans-serif;
+            font-family: $fuente;
             font-size: 20px;
             margin-top: 20px;
         }
