--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -65,9 +65,10 @@ header {
     font-size: 19px;
 
     @media (max-width:1650px){
-        margin: 0 10px 0 10px;
+        margin: 0px 10px 0 10px;
     }
 }
+
 
 .ubiConteiner{
     display: grid;
