--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -12,6 +12,7 @@
     font-family: $fuente;
     font-size: 20px;
     background-color: $verde;
+    box-shadow: 0px 5px 22px 52px rgba(0,0,0,0.1);
     form{
         button{
             margin-top: 20px;
